<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyFirstandproj</string>
    <string name="hello_world">Hello Debashis!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_b">ActivityB</string>
    <string name="welcomeActivityBMessage">Inside Activity B</string>
    <string name="title_activity_welcome_screen">WelcomeScreen</string>
    <string name="welcomeStr">Welcome to WaterApp !</string>
    <string name="AppDesc">"This application will help you to order Water for your day to day usage very conveniently. "</string>
    <string name="emailHint">email@domain.com</string>
    <string name="passwordHint">*****</string>
    <string name="logInButtonStr">Login</string>
    <string name="userSignUpStr">New User -> Sign Up</string>
    <string name="title_activity_java">JavaActivity</string>
    <string name="title_activity_frame_layout">FrameLayoutActivity</string>
    <string name="title_activity_custom_font">CustomFontActivity</string>
    <string name="title_activity_validation">Validation</string>
    <string name="title_activity_check_box">CheckBoxActivity</string>
    <string name="title_activity_toggle_btn">ToggleBtn</string>
    <string name="title_activity_adapter">Adapter</string>
    <string name="title_activity_inflater_demo">InflaterDemo</string>
    <string name="title_activity_list_view_with_img">ListViewWithImg</string>
    
    <string-array name="listViewWithImg_weekdays">
        <item >Monday</item>
        <item >Tuesday</item>
        <item >Wednesday</item>
        <item >Thursdday</item>
        <item >Friday</item>
        <item >Saturday</item>
        <item >Sunday</item>
    </string-array>
    
    <string-array name="listViewWithImg_weekdaysDesc">
        <item >lots of work to be done</item>
        <item >lots of meeting today</item>
        <item >mid of the day</item>
        <item >start working on your weekly target</item>
        <item >Yahoo.....leave office at 4</item>
        <item >Enjoy the day and take rest</item>
        <item >Recharge yourself !! </item>
    </string-array>

</resources>
